@@ -64,14 +64,6 @@ namespace Castle.DynamicProxy.Tests.Classes
 	[Serializable]
 #endif
 	[AttributeUsage(AttributeTargets.All, Inherited = false)]
-	public class NonInheritableAttribute : Attribute
-	{
-	}
-
-#if !SILVERLIGHT
-	[Serializable]
-#endif
-	[AttributeUsage(AttributeTargets.All, Inherited = false)]
 	public class ComplexNonInheritableAttribute : Attribute
 	{
 		public int id, num;
